// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageUrlDetails Component shows separate URL histories for each version if they differ 1`] = `
<div>
  <details
    class="src-components-page-url-details-___page-url-details__page-url-details___1F8v5"
  >
    <summary>
      ⚠️ Versions come from different URLs
    </summary>
    <strong>
      From Version URL and Redirects:
    </strong>
    <ol
      class="src-components-page-url-details-___page-url-details__url-history-list___3qirP"
    >
      <li>
        <a
          href="http://www.ncei.noaa.gov/news/earth-science-conference-convenes"
          rel="noopener noreferrer"
          target="_blank"
        >
          http://
           
          www
          .
          ncei
          .
          noaa
          .
          gov
           
          / news
           
          / earth-science-conference-convenes
           
          
           
          
        </a>
        <i
          class="fa fa-no-hover fa-right-icon fa-angle-right"
          title="Redirects to"
        />
      </li>
      <li>
        <a
          href="http://www.ncei.noaa.gov/news/earth-science-conference-convenes/something"
          rel="noopener noreferrer"
          target="_blank"
        >
          http://
           
          www
          .
          ncei
          .
          noaa
          .
          gov
           
          / news
           
          / earth-science-conference-convenes
           
          <ins>
            / something
          </ins>
           
          
           
          
        </a>
      </li>
    </ol>
    <strong>
      To Version URL and Redirects:
    </strong>
    <ol
      class="src-components-page-url-details-___page-url-details__url-history-list___3qirP"
    >
      <li>
        <a
          href="http://www.ncei.noaa.gov/news/earth-science-conference-convenes"
          rel="noopener noreferrer"
          target="_blank"
        >
          http://
           
          www
          .
          ncei
          .
          noaa
          .
          gov
           
          / news
           
          / earth-science-conference-convenes
           
          
           
          
        </a>
        <i
          class="fa fa-no-hover fa-right-icon fa-angle-right"
          title="Redirects to"
        />
      </li>
      <li>
        <a
          href="http://www.ncei.noaa.gov/news/earth-science-conference-convenes/something/else"
          rel="noopener noreferrer"
          target="_blank"
        >
          http://
           
          www
          .
          ncei
          .
          noaa
          .
          gov
           
          / news
           
          / earth-science-conference-convenes
           
          <ins>
            / something
          </ins>
           
          <ins>
            / else
          </ins>
           
          
           
          
        </a>
      </li>
    </ol>
  </details>
</div>
`;

exports[`PageUrlDetails Component shows the versions' URL if it differs from the page's 1`] = `
<div>
  <details
    class="src-components-page-url-details-___page-url-details__page-url-details___1F8v5"
  >
    <summary>
      ⚠️ Captured from a different URL
    </summary>
    <a
      href="http://www.ncei.noaa.gov/news/earth-science-conference-convenes/something"
      rel="noopener noreferrer"
      target="_blank"
    >
      http://
       
      www
      .
      ncei
      .
      noaa
      .
      gov
       
      / news
       
      / earth-science-conference-convenes
       
      <ins>
        / something
      </ins>
       
      
       
      
    </a>
  </details>
</div>
`;

exports[`PageUrlDetails Component shows the versions' redirects 1`] = `
<div>
  <details
    class="src-components-page-url-details-___page-url-details__page-url-details___1F8v5"
  >
    <summary>
      ⚠️ Captured URL Redirected Somewhere Else
    </summary>
    <ol
      class="src-components-page-url-details-___page-url-details__url-history-list___3qirP"
    >
      <li>
        <a
          href="http://www.ncei.noaa.gov/news/earth-science-conference-convenes"
          rel="noopener noreferrer"
          target="_blank"
        >
          http://
           
          www
          .
          ncei
          .
          noaa
          .
          gov
           
          / news
           
          / earth-science-conference-convenes
           
          
           
          
        </a>
        <i
          class="fa fa-no-hover fa-right-icon fa-angle-right"
          title="Redirects to"
        />
      </li>
      <li>
        <a
          href="http://www.ncei.noaa.gov/news/earth-science-conference-convenes/something"
          rel="noopener noreferrer"
          target="_blank"
        >
          http://
           
          www
          .
          ncei
          .
          noaa
          .
          gov
           
          / news
           
          / earth-science-conference-convenes
           
          <ins>
            / something
          </ins>
           
          
           
          
        </a>
      </li>
    </ol>
  </details>
</div>
`;
